--- a/RestAPI/package.json
+++ b/RestAPI/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "cloudinary": "^1.41.1",
-    "next": "14.0.4",
+    "koa": "^2.15.0",
+    "koa-router": "^12.0.1",
+    "next": "^14.1.0",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18"
   },
